# ChangeLog for dev-libs/Ice
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/Ice/ChangeLog,v 1.25 2013/09/05 18:29:54 mgorny Exp $

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> Ice-3.5.0-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  30 Jul 2013; Lars Wendler <polynomial-c@gentoo.org> Ice-3.5.0-r1.ebuild:
  Non-maintainer commit: Don't use pkg_setup() from ruby-ng eclass.

*Ice-3.5.0-r1 (30 Jul 2013)

  30 Jul 2013; Lars Wendler <polynomial-c@gentoo.org> Ice-3.4.2.ebuild,
  -Ice-3.4.2-r1.ebuild, -Ice-3.5.0.ebuild, +Ice-3.5.0-r1.ebuild:
  Non-maintainer commit: Converted ebuild to python-r1 eclass. Thanks to mgorny
  for his expensive work with the conversion. Changed dependencies to not use
  >=sys-libs/db-6.0 due to upstream not supporting this version because of
  license issues (bug #476378). Removed old.

  12 Jun 2013; Lars Wendler <polynomial-c@gentoo.org> Ice-3.5.0.ebuild:
  Fixed installation with "doc" USE flag being enabled. Thanks to Martin von
  Gagern for reporting this in bug #473106.

*Ice-3.5.0 (05 Jun 2013)

  05 Jun 2013; Lars Wendler <polynomial-c@gentoo.org> +Ice-3.5.0.ebuild:
  Non-maintainer commit: Version bump.

  10 Dec 2012; Lars Wendler <polynomial-c@gentoo.org> Ice-3.4.2-r1.ebuild:
  Fixed dependency on openssl.

  10 Dec 2012; Lars Wendler <polynomial-c@gentoo.org> Ice-3.4.2-r1.ebuild:
  Re-added gcc47 patch to SRC_URI.

*Ice-3.4.2-r1 (10 Dec 2012)

  10 Dec 2012; Christoph Junghans <ottxor@gentoo.org> +Ice-3.4.2-r1.ebuild:
  added prefix support (bug #385567)

  16 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> Ice-3.4.2.ebuild:
  Fix building with >=sys-devel/gcc-4.7 wrt #422585

  16 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> Ice-3.4.2.ebuild:
  Pull in correct SLOT of dev-libs/openssl to ensure headers are installed.

  16 Nov 2012; Lars Wendler <polynomial-c@gentoo.org> -Ice-3.2.0.ebuild,