@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=>=dev-libs/expat-2.0.1 >=app-arch/bzip2-1.0.5 >=dev-libs/openssl-0.9.8o:0 <sys-libs/db-6.0[cxx] ~dev-cpp/libmcpp-2.7.2 python? ( python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_pypy2_0? ( >=virtual/pypy-2.0.2:2.0 ) dev-python/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy2_0(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy2_0(-)] ) ruby? ( dev-lang/ruby:1.8 ) mono? ( dev-lang/mono ) !dev-python/IcePy !dev-ruby/IceRuby ncurses? ( sys-libs/ncurses sys-libs/readline ) test? ( python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_pypy2_0? ( >=virtual/pypy-2.0.2:2.0 ) dev-python/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy2_0(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy2_0(-)] ) userland_GNU? ( >=sys-apps/coreutils-8.5 )
+DESCRIPTION=ICE middleware C++ library and generator tools
+EAPI=5
+HOMEPAGE=http://www.zeroc.com/
+IUSE=doc examples +ncurses mono python ruby test debug python_targets_python2_6 python_targets_python2_7 python_targets_pypy2_0 elibc_FreeBSD ruby_targets_ruby18
+KEYWORDS=~amd64 ~arm ~ia64 ~x86 ~x86-linux ~x64-macos
+LICENSE=GPL-2
+RDEPEND=>=dev-libs/expat-2.0.1 >=app-arch/bzip2-1.0.5 >=dev-libs/openssl-0.9.8o:0 <sys-libs/db-6.0[cxx] ~dev-cpp/libmcpp-2.7.2 python? ( python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_pypy2_0? ( >=virtual/pypy-2.0.2:2.0 ) dev-python/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy2_0(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy2_0(-)] ) ruby? ( dev-lang/ruby:1.8 ) mono? ( dev-lang/mono ) !dev-python/IcePy !dev-ruby/IceRuby
+SLOT=0
+SRC_URI=http://www.zeroc.com/download/Ice/3.5/Ice-3.5.1.tar.gz doc? ( http://www.zeroc.com/download/Ice/3.5/Ice-3.5.1.pdf )
+_eclasses_=db-use	1c719875d6599536f956fafea9e1f404	eutils	4878e7f88afc0ba0866ac112190b0fd4	java-utils-2	8d0d93b7a8605ea346cce4604f6db516	mono-env	59ca1177366cc9e14521d3501e9bb281	multibuild	56d4120419072116417e8de1bd1040ff	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python-r1	3baffd4f94003161708508813a475647	python-utils-r1	4f3595fa07cbecf9f3cfabd0f9a6f34b	ruby-ng	69c01a1b984ed066bc91b4397b002f6a	toolchain-funcs	3e30ef439a720915f8f4fd4fe75f704c	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=5799ba38ca5187bffbc3c6b82075cce2
