@@ -3,10 +3,10 @@ DEPEND=selinux? ( sys-libs/libselinux ) pam? ( virtual/pam ) >=sys-apps/sed-4.0.
 DESCRIPTION=Paul Vixie's cron daemon, a fully featured crond implementation
 HOMEPAGE=ftp://ftp.isc.org/isc/cron/
 IUSE=selinux pam debug
-KEYWORDS=~alpha amd64 arm hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd
+KEYWORDS=~alpha amd64 arm hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd
 LICENSE=ISC BSD-2 BSD
 RDEPEND=selinux? ( sys-libs/libselinux ) pam? ( virtual/pam ) >=sys-process/cronbase-0.3.2 !sys-process/bcron !sys-process/cronie !sys-process/dcron !sys-process/fcron
 SLOT=0
 SRC_URI=mirror://gentoo/vixie-cron-4.1.tar.bz2 mirror://gentoo/vixie-cron-4.1-gentoo-r4.patch.bz2
 _eclasses_=cron	18adefe7a7b2f043ca5b63e912835970	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	46e34faf3660a9fa3d374b042130fb20	multilib	892e597faee02a5b94eb02ab512e7622	pam	5c1a9ef4892062f9ec25c8ef7c1f1e52	systemd	e80fe2d5b43ec0f0160c6e8ef931fa4c	toolchain-funcs	3e30ef439a720915f8f4fd4fe75f704c	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=a066712dcd94d2e87f3d36af7c6c1545
+_md5_=6d5137fdc3a352ffe24bbfbd22d84eed
