@@ -1,6 +1,9 @@
 # ChangeLog for sys-process/vixie-cron
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/vixie-cron/ChangeLog,v 1.69 2013/10/10 20:42:48 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/vixie-cron/ChangeLog,v 1.70 2013/10/11 08:21:17 pinkbyte Exp $
+
+  11 Oct 2013; Sergey Popov <pinkbyte@gentoo.org> vixie-cron-4.1-r13.ebuild:
+  Stable on x86, wrt bug #480122
 
   10 Oct 2013; Tony Vroon <chainsaw@gentoo.org> vixie-cron-4.1-r13.ebuild:
   Marked stable on AMD64 based on arch tester report by MJJoker in bug #480122.
